--- a/blog/themes/next/_config.yml
+++ b/blog/themes/next/_config.yml
@@ -279,7 +279,7 @@ mathjax:
 #swiftype_key:
 
 # Baidu Analytics ID
-#baidu_analytics:
+baidu_analytics: 60aa663d33fe2a71d585c309366f96ff
 
 # Duoshuo ShortName
 #duoshuo_shortname:
